# project-template

./: .dockerignore  BRANCH-GUIDELINES.md  CODE-GUIDELINES.md  README.md  dockerfile  pyproject.toml
configs/: config.ini
src/utils/: config.py  logger.py
